# Python_projects

./: README.md  note_4_file.txt
SnakeLadderCUI/: newsnak.py
Sneck&lader/: snake_and_ladder_game.py
Swiggy-Project/: DharamGaram.py  PindBalluchi.py  README.md  RajinderDaDhaba.py  art.py  food_ordering_system.py  getSingleOrder.py  multiple_order.py  payment.py  update_menu.py
Swiggy-pro/: Apoorva.py  food_ordering_system.py  multiple_order.py
cab_booking/: car.py  main.py  show.py
cab_booking/database/: Booking.csv  Driver_Cab.csv  Rider.csv
snackgame/: pyproject.toml
start_project/: Picachu.py  doremon.py
start_project/paython_TKniter/: Attributes_Of_LabelPack.py  FrameInTkinter.py  bottum-strip.py  news-pepar.py  start.py
swigg/: Rasta.py  district.py  payment.py  single_order.py  update_menu.py
tik_tak/: tik_tak.py
